Подготовка планшетной адаптации

--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@
                 <li class="nav-item"><a href="index.html"><img src="img/logo.svg" alt="Логотип"></a></li>
                 <li class="nav-item"><a href="contacts.html"><img src="img/contacts.svg" alt="Контакты"></a></li>
             </ul>
-            <!-- <hr> -->
-            <!-- <div class="index-banner"> -->
-            <!-- Баннер на главной странице -->
+
             <div class="index-banner-text">
                 <h1 class="index-banner-heading">New Automation Tool For You</h1>
                 <p class="index-banner-text-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque quia
@@ -29,7 +27,6 @@
                 <a href="#" class="top-button">See Our Projects</a>
             </div>
 
-            <!-- </div> -->
 
         </div>
     </div>
@@ -105,16 +102,16 @@
             </div>
         </div>
         <hr>
-        <div class="container">
-            <div class="footer-bottom">
-                <ul class="footer-contacts">
-                    <li class="footer-contact">Lorem ipsum dolor sit amet consectetur, adipisicing elit </li>
-                    <li class="footer-contact">T. +7 495 467-77-45 </li>
-                    <li class="footer-contact">E. welcome@ourteam.com</li>
-                </ul>
-                <p class="copyright">Copyright &copy Evg S. Ivan. All rights reserved</p>
-            </div>
+
+        <div class="footer-bottom container">
+            <ul class="footer-contacts">
+                <li class="footer-contact">Lorem ipsum dolor sit amet consectetur, adipisicing elit </li>
+                <li class="footer-contact">T. +7 495 467-77-45 </li>
+                <li class="footer-contact">E. welcome@ourteam.com</li>
+            </ul>
+            <p class="copyright">Copyright &copy Evg S. Ivan. All rights reserved</p>
         </div>
+
     </div>
     </div>
 
