Подключен SCSS. Сделана шапка contscts.html

--- a/contacts.html
+++ b/contacts.html
@@ -9,25 +9,33 @@
 </head>
 
 <body>
-    <div class="container">
-        <div class="wrapper-contacts-top">
-            <div class="contacts-top">
-                <!-- Меню бар -->
-                <ul class="nav-bar">
-                    <li class="nav-item"><a href="index.html">Home</a></li>
-                    <li class="nav-item"><a href="contacts.html">Contacts</a></li>
-                </ul>
-                <hr>
-                <div class="contacts-banner">
-                    <!-- Баннер страницы контактов -->
-                    <h2 class="contacts-banner-heading">Contact Us</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit omnis non rerum harum reprehenderit
-                        voluptatum
-                        laborum porro earum nam labore.</p>
-                </div>
+    <div class="wrapper-top-contacts">
+        <div class="container top-contacts">
+            <!-- Меню бар -->
+            <ul class="nav-bar">
+                <li class="nav-item"><a href="index.html"><img src="img/logo.svg" alt="Логотип"></a></li>
+                <li class="nav-item"><a href="contacts.html"><img src="img/contacts.svg" alt="Контакты"></a></li>
+            </ul>
+        </div>
+        <div class="contacts-banner-wide">
+            <div class=" container contacts-banner-text">
+                <!-- Баннер страницы контактов -->
+                <h2 class="contacts-banner-heading">Contact Us</h2>
+                <p class="contacts-banner-text-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit omnis
+                    non
+                    rerum harum reprehenderit
+                    voluptatum
+                    laborum porro earum nam labore.</p>
             </div>
         </div>
 
+    </div>
+    </div>
+
+
+
+
+    <div class="container">
         <div class="contacts-content">
             <div class="contacts">
                 <!-- Блок контактов -->
