--- a/contacts.html
+++ b/contacts.html
@@ -28,60 +28,61 @@
                     laborum porro earum nam labore.</p>
             </div>
         </div>
-
-    </div>
     </div>
 
+    <!-- контент -->
 
-
-
-    <div class="container">
-        <div class="contacts-content">
-            <div class="contacts">
-                <!-- Блок контактов -->
-                <img src="" alt="Рисунок для контактов">
-                <div class="contacts-item">
-                    <h4 class="contacts-item-heading">Address</h4>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Commodi, dolor?</p>
-                </div>
-                <div class="contacts-item">
-                    <h4 class="contacts-item-heading">Phone</h4>
-                    <ul>
-                        <li>+7 495 467-77-45</li>
-                        <li>+7 495 467-77-49</li>
-                    </ul>
-                </div>
-                <div class="contacts-item">
-                    <h4 class="contacts-item-heading">Online Service</h4>
-                    <ul>
-                        <li>www.site.com</li>
-                        <li>welcome@ourteam.com</li>
-                    </ul>
-                </div>
+    <div class="container contacts-content">
+        <div class="contacts">
+            <!-- Блок контактов -->
+            <img src="img/phone.svg" alt="Рисунок для контактов">
+            <div class="contacts-item">
+                <h4 class="contacts-item-heading">Address</h4>
+                <p class="contacts-item-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Commodi, dolor?
+                </p>
             </div>
-            <div class="send-us">
-                <!-- Блок обратной связи -->
-                <h4 class="contacts-item-heading">Send Us Message</h4>
-                <form class="send-us-form" action="#">
-                    Full Name
-                    <input class="send-us-form-items" type="text" placeholder="Your Name">
-                    <br>
-                    Email
-                    <input class="send-us-form-items" type="email" placeholder="Your Email">
-                    <br>
-                    Message <br>
-                    <textarea class="send-us-form-items textarea" name="" id="" cols="30" rows="7"></textarea>
-                    <br>
-                    <button class="send-us-form-btn" type="submit">Send</button>
-                </form>
+            <div class="contacts-item">
+                <h4 class="contacts-item-heading">Phone</h4>
+                <ul class="contacts-item-text contacts-item-phone-li">
+                    <li>+7 495 467-77-45</li>
+                    <li>+7 495 467-77-49</li>
+                </ul>
+            </div>
+            <div class="contacts-item">
+                <h4 class="contacts-item-heading">Online Service</h4>
+                <ul class="contacts-item-text">
+                    <li class="contacts-item-www-li">www.site.com</li>
+                    <li class="contacts-item-email-li">welcome@ourteam.com</li>
+                </ul>
             </div>
         </div>
-        <!-- Яндекс -карта -->
-        <div class="find-us">
-            <iframe src="https://yandex.ru/map-widget/v1/-/CCUMMFRkWA" frameborder="0" width="100%" height="300"
-                allowfullscreen="false" style="position:relative;"></iframe>
+
+        <div class="send-us">
+            <!-- Блок обратной связи -->
+            <form class="send-us-form" action="#">
+                <h4 class="send-us-heading">Send Us Message</h4>
+
+                <p class="input-caption">Full Name</p>
+                <input class="send-us-form-item" type="text" placeholder="Your Name">
+
+                <p class="input-caption">Email</p>
+                <input class="send-us-form-item" type="email" placeholder="Your Email">
+
+                <p class="input-caption">Message <br></p>
+                <textarea class="send-us-form-item textarea" name="" rows="4" placeholder="Your message"></textarea>
+
+                <button class="send-us-form-btn" type="submit">Submit</button>
+            </form>
         </div>
     </div>
+
+
+    <!-- Яндекс -карта -->
+    <div class="find-us">
+        <iframe src="https://yandex.ru/map-widget/v1/-/CCUMMFRkWA" frameborder="0" width="100%" height="300"
+            allowfullscreen="false" style="position:relative;"></iframe>
+    </div>
+
 
     <!-- Футер -->
     <div class="footer">
