оформлена карта. Подправлен футер

--- a/contacts.html
+++ b/contacts.html
@@ -78,10 +78,11 @@
 
 
     <!-- Яндекс -карта -->
-    <div class="find-us">
-        <iframe src="https://yandex.ru/map-widget/v1/-/CCUMMFRkWA" frameborder="0" width="100%" height="300"
+    <div class="find-us container">
+        <iframe src="https://yandex.ru/map-widget/v1/-/CCUMMFRkWA" frameborder="0" width="100%" height="100%"
             allowfullscreen="false" style="position:relative;"></iframe>
     </div>
+
 
 
     <!-- Футер -->
@@ -90,22 +91,25 @@
             <div class="footer-banner">
                 <div class="footer-banner-text">
                     <h3 class="footer-heading">Interested to work with our team?</h3>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis quibusdam cumque, facilis
+                    <p class="footer-top-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis
+                        quibusdam cumque, facilis
                         explicabo soluta
                         recusandae laborum qui itaque</p>
                 </div>
-                <Button>Let's talk</Button>
-            </div>
-            <hr>
-            <div class="footer-bottom">
-                <ul class="footer-contacts">
-                    <li>A. Lorem ipsum dolor sit amet consectetur, adipisicing elit.</li>
-                    <li>T. +7 495 467-77-45 </li>
-                    <li>E. welcome@ourteam.com</li>
-                </ul>
-                <p class="copyright">Copyright &copy Evg S. Ivan. All rights reserved</p>
+                <a href="#" class="footer-button">Let's talk</a>
             </div>
         </div>
+        <hr>
+
+        <div class="footer-bottom container">
+            <ul class="footer-contacts">
+                <li class="footer-contact">Lorem ipsum dolor sit amet consectetur, adipisicing elit </li>
+                <li class="footer-contact">T. +7 495 467-77-45 </li>
+                <li class="footer-contact">E. welcome@ourteam.com</li>
+            </ul>
+            <p class="copyright">Copyright &copy Evg S. Ivan. All rights reserved</p>
+        </div>
+
     </div>
 
 
