--- a/contacts.html
+++ b/contacts.html
@@ -14,6 +14,9 @@
             <!-- Меню бар -->
             <ul class="nav-bar">
                 <li class="nav-item"><a href="index.html"><img src="img/logo.svg" alt="Логотип"></a></li>
+
+                <li class="nav-item"><a class="see-landing" href="index.html">See Landing</a></li>
+
                 <li class="nav-item"><a href="contacts.html"><img src="img/contacts.svg" alt="Контакты"></a></li>
             </ul>
         </div>
@@ -69,7 +72,8 @@
                 <input class="send-us-form-item" type="email" placeholder="Your Email">
 
                 <p class="input-caption">Message <br></p>
-                <textarea class="send-us-form-item textarea" name="" rows="4" placeholder="Your message"></textarea>
+                <textarea class="send-us-form-item textarea" name="user-message" rows="4"
+                    placeholder="Your message"></textarea>
 
                 <button class="send-us-form-btn" type="submit">Submit</button>
             </form>
@@ -78,9 +82,8 @@
 
 
     <!-- Яндекс -карта -->
-    <div class="find-us">
-        <iframe src="https://yandex.ru/map-widget/v1/-/CCUMMFRkWA" frameborder="0" width="100%" height="100%"
-            allowfullscreen="false" style="position:relative;"></iframe>
+    <div class="find-us container">
+        <iframe src="https://yandex.ru/map-widget/v1/-/CCUMMFRkWA" width="100%" height="100%"></iframe>
     </div>
 
 
@@ -107,7 +110,7 @@
                 <li class="footer-contact">T. +7 495 467-77-45 </li>
                 <li class="footer-contact">E. welcome@ourteam.com</li>
             </ul>
-            <p class="copyright">Copyright &copy Evg S. Ivan. All rights reserved</p>
+            <p class="copyright">Copyright &copy; Evg S. Ivan. All rights reserved</p>
         </div>
 
     </div>
