--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <!-- Меню бар -->
             <ul class="nav-bar">
                 <li class="nav-item"><a href="index.html"><img src="img/logo.svg" alt="Логотип"></a></li>
+                <li class="nav-item"><a class="see-landing" href="index.html">See Landing</a></li>
                 <li class="nav-item"><a href="contacts.html"><img src="img/contacts.svg" alt="Контакты"></a></li>
             </ul>
 
@@ -111,7 +112,7 @@
                 <li class="footer-contact">T. +7 495 467-77-45 </li>
                 <li class="footer-contact">E. welcome@ourteam.com</li>
             </ul>
-            <p class="copyright">Copyright &copy Evg S. Ivan. All rights reserved</p>
+            <p class="copyright">Copyright &copy; Evg S. Ivan. All rights reserved</p>
         </div>
 
     </div>
