--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <!-- Меню бар -->
             <ul class="nav-bar">
                 <li class="nav-item"><a href="index.html"><img src="img/logo.svg" alt="Логотип"></a></li>
-                <li class="nav-item"><a class="see-landing" href="index.html">See Landing</a></li>
+                <li class="nav-item"><a class="see-landing" href="landing.html">See Landing</a></li>
                 <li class="nav-item"><a href="contacts.html"><img src="img/contacts.svg" alt="Контакты"></a></li>
             </ul>
 
